# authn-ai-agent-poc

./: .env.example  .env.template  .gitignore  ARCHITECTURE.md  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README-TESTING.md  README.md  SETUP.md  docker-compose.override.yml.example  docker-compose.yml  test-auth.sh  test-setup.sh  test.sh
acme_api/: Dockerfile  pyproject.toml
acme_api/app/: __init__.py  jwt_verify.py  main.py  settings.py
agent/: Dockerfile  pyproject.toml
agent/app/: __init__.py  auth.py  graph.py  main.py  settings.py  tools.py  types.py
authz/: Dockerfile  policy.rego
bff/: Dockerfile  pyproject.toml
bff/app/: __init__.py  main.py  oidc.py  session.py  settings.py  types.py
gateway/: Dockerfile  entrypoint.sh  envoy.yaml
mock_cognito/: requirements.txt
mock_cognito/app/: __init__.py  main.py
