[project]
name = "agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "httpx>=0.27",
  "pydantic>=2.8",
  "pydantic-settings>=2.0",
  "python-jose[cryptography]>=3.3",
  "langgraph>=0.2",
  "langchain>=0.2",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
