[project]
name = "bff"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "httpx>=0.27",
  "itsdangerous>=2.2",
  "pydantic>=2.8",
  "pydantic-settings>=2.0",
  "python-jose[cryptography]>=3.3",
  "Authlib>=1.3",
  "redis>=5.0",
  "types-redis",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
